[project]
name = "my-project"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Nolan", email = "nolan.clou@live.fr" }
]
dependencies = [
    "pandas>=2.2.2",
    "ruff>=0.4.10",
    "plotly>=5.22.0",
    "statsmodels>=0.14.2",
    "dbnomics>=1.2.5",
    "streamlit>=1.36.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/my_project"]
