[project]
name = "gdp-trade-balance-correlation"
version = "0.1.0"
description = "GDP - Trade balance correlation dashboard with DBnomics data"
authors = [{ name = "Nolan Clou", email = "nolan.clou@live.fr" }]
dependencies = [
    "dbnomics>=1.2.5",
    "pandas>=2.2.2",
    "plotly>=5.22.0",
    "statsmodels>=0.14.2",
    "streamlit>=1.36.0",
    "streamlit-option-menu>=0.3.13",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff>=0.5.0"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/my_project"]
